--- a/.github/workflows/data-pipeline.yml
+++ b/.github/workflows/data-pipeline.yml
@@ -10,43 +10,42 @@ on:
 jobs:
   data-processing:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v2
-    
+    - name: Checkout repository
+      uses: actions/checkout@v4  # Updated to latest version
+
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4  # Updated to latest version
       with:
         python-version: '3.8'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+        pip install pytest  # Ensure pytest is installed
+
     - name: Run data preparation
       run: python main.py --prepare
-      
+
     - name: Run data tests
-      run: |
-        python -m pytest
-        
+      run: python -m pytest
+
     - name: Upload processed data
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3  # Updated from deprecated v2
       with:
         name: prepared-data
         path: prepared_data.joblib
-        
+
     - name: Notify on completion
       if: always()
       uses: actions/github-script@v6
       with:
         script: |
-          const { status } = process.env;
-          const message = `Data pipeline completed with status: ${status}`;
           github.rest.issues.createComment({
-            issue_number: context.issue.number,
+            issue_number: 1,  // Replace with a real issue number if needed
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: message
+            body: "Data pipeline completed successfully ✅"
           });
