--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -5,51 +5,82 @@ on:
     workflows: ["Model Training"]
     types:
       - completed
+    branches:
+      - master  # Added to match other workflows
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Added to only deploy on success
     
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Download model artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: model-artifacts
-        
-    - name: Set up MLflow
-      run: |
-        pip install mlflow
-        mlflow server --host 127.0.0.1 --port 5002 &
-        sleep 10  # Wait for server to start
-        
-    - name: Deploy model
-      run: python main.py --deploy
+      - uses: actions/checkout@v4  # Updated from v2
       
-    - name: Test deployment
-      run: python main.py --predict
+      - name: Set up Python
+        uses: actions/setup-python@v4  # Updated from v2
+        with:
+          python-version: '3.8'
       
-    - name: Send email notification
-      if: always()
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: ${{secrets.MAIL_SERVER}}
-        server_port: 465
-        username: ${{secrets.MAIL_USERNAME}}
-        password: ${{secrets.MAIL_PASSWORD}}
-        subject: Model deploiement Status
-        body: Model Deployed completed. Check results in GitHub Actions.
-        to: ${{secrets.NOTIFICATION_EMAIL}}
-        from: GitHub Actions
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Download model artifacts
+        uses: actions/download-artifact@v4  # Updated from v2
+        with:
+          name: model-artifacts
+          github-token: ${{ secrets.TOKEN }}
+          run-id: ${{ github.event.workflow_run.id }}
+      
+      - name: Set up MLflow
+        run: |
+          pip install mlflow
+          mlflow server --host 127.0.0.1 --port 5002 &
+          sleep 10  # Wait for server to start
+      
+      - name: Deploy model
+        run: python main.py --deploy
+      
+      - name: Test deployment
+        run: python main.py --predict
+      
+      - name: Process deployment status  # Added to match other workflows
+        if: always()
+        run: |
+          if [[ "${{ job.status }}" == "success" ]]; then
+            echo "DEPLOY_STATUS=✅ Model deployment completed successfully" >> $GITHUB_ENV
+            echo "EMAIL_SUBJECT=Model Deployment Success - $(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          else
+            echo "DEPLOY_STATUS=❌ Model deployment failed" >> $GITHUB_ENV
+            echo "EMAIL_SUBJECT=Model Deployment Failed - $(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          fi
+
+      - name: Generate email body  # Added more detailed email
+        if: always()
+        run: |
+          echo "Model Deployment Pipeline Status Update
+          
+          Status: ${{ env.DEPLOY_STATUS }}
+          
+          Details:
+          - Repository: ${{ github.repository }}
+          - Branch: ${{ github.ref }}
+          - Workflow Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          
+          This is an automated message from GitHub Actions." > email_body.txt
+
+      - name: Send email notification
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: ${{secrets.MAIL_SERVER}}
+          server_port: 465
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
+          subject: ${{ env.EMAIL_SUBJECT }}
+          body_path: email_body.txt
+          to: ${{secrets.NOTIFICATION_EMAIL}}
+          from: GitHub Actions
+          secure: true
