--- a/.github/workflows/model-training.yml
+++ b/.github/workflows/model-training.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: prepared-data
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
       
       - name: Train model
@@ -73,3 +73,31 @@ jobs:
             echo "MODEL_STATUS=❌ Model training failed" >> $GITHUB_ENV
             echo "EMAIL_SUBJECT=Model Training Failed - $(date +'%Y-%m-%d')" >> $GITHUB_ENV
           fi
+
+      - name: Generate email body
+        if: always()
+        run: |
+          echo "Model Training Pipeline Status Update
+          
+          Status: ${{ env.MODEL_STATUS }}
+          
+          Details:
+          - Repository: ${{ github.repository }}
+          - Branch: ${{ github.ref }}
+          - Workflow Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          
+          This is an automated message from GitHub Actions." > email_body.txt
+
+      - name: Send email notification
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: ${{secrets.MAIL_SERVER}}
+          server_port: 465
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
+          subject: ${{ env.EMAIL_SUBJECT }}
+          body_path: email_body.txt
+          to: ${{secrets.NOTIFICATION_EMAIL}}
+          from: GitHub Actions
+          secure: true
