--- a/.github/workflows/model-training.yml
+++ b/.github/workflows/model-training.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: prepared-data
-          github-token: ${{ secrets.TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
       
       - name: Train model
