--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v4  # Updated from v2
         with:
           name: model-artifacts
-          github-token: ${{ secrets.TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
       
       - name: Set up MLflow
